--- a/index.html
+++ b/index.html
@@ -47,7 +47,10 @@
         <p>I am a first-year Master's student in the Big Data Analytics track of School of Information at University of Michigan, Ann Arbor. I hold a Bachelor's degree in Electrical and Computer Engineering from Shanghai Jiao Tong University.</p>
         <br>
         <div class="guigui">
-            <p>I keep one of the cutest cat in the world, and his name is <span id="cat-name" class="clickable">little ghost ^-^</span>.</p>
+            <p>I keep one of the cutest cat in the world, and his name is <span id="cat-name" class="clickable">little ghost ^-^
+                    <span class="tooltip">Click to see his cute figures!</span>
+                </span>.
+            </p>
         </div>
             <div id="cat-pic-modal" class="modal">
                 <span class="close">&times;</span>
