--- a/resume.html
+++ b/resume.html
@@ -42,7 +42,6 @@
               <div class="timeline-img">
                 <img src="images/school.JPG" alt="This is the photo of me reading in school's library.">
               </div>
-
             </div>
 
             <div class="timeline-item">
@@ -81,7 +80,6 @@
                   <img src="images/sjtu_ico.png" alt="SJTU's icon">
                   <span class="hide">Click for more information</span>
                 </div>
-                <div class="hide">Click for more information</div>
                 <div class="timeline-content">
                   <p>Master of Science in Information - Big Data Analytics</p>
                   <h4>Awards</h4>
@@ -92,6 +90,54 @@
                   </ul>
                 </div>
               </div>
+
+            <div class="timeline-item">
+                <div class="timeline-header-1">
+                <h2>Experience</h2>
+              </div>
+            </div>
+
+            <div class="timeline-item">
+              <div class="timeline-header">
+                  <h3>Youth Volunteer Team of UM-SJTU Joint Institute</h3>
+                <span class="date">May. 2021 - May. 2022</span>
+              </div>
+              <div class="experience-icon">
+                <img src="images/jimy.jpg" class="jimy" alt="SJTU-JI Youth Volunteer Team's icon">
+                <span class="hide">Click for more information</span>
+              </div>
+              <div class="experience-header"><h3>Head of Organization and Liaison Department</h3></div>
+              <div class="timeline-content" id="experience-content">
+                <p>While a member of the Youth Team, I actively participated in initiatives at "Sunshine House," an organization dedicated to supporting individuals with disabilities. My involvement included collaboratively baking cookies with disabled members and engaging in a variety of group activities, fostering community involvement and enhancing social interactions.</p>
+                <h4>Photo Gallery</h4>
+                <ul>
+                  <li class="image-container"><img src="images/ji2.JPG" alt="My photo in volunteering activity."></li>
+                  <li class="image-container"><img src="images/ji4.JPEG" alt="My photo in volunteering activity."></li>
+                  <li class="image-container"><img src="images/ji1.JPG" alt="My photo in volunteering activity."></li>
+                </ul>
+              </div>
+            </div>
+
+            <div class="timeline-item">
+              <div class="timeline-header">
+                  <h3>Piano Association of SJTU</h3>
+                <span class="date">Aug. 2021 - Aug. 2022</span>
+              </div>
+              <div class="experience-icon">
+                <img src="images/piano_icon.jpg" class="jimy" alt="Piano Association of SJTU's icon">
+                <span class="hide">Click for more information</span>
+              </div>
+              <div class="experience-header"><h3>Head of Planning Department</h3></div>
+              <div class="timeline-content" id="experience-content">
+                <p>As a dynamic leader in the arts, I spearheaded regular major piano concerts and facilitated music-sharing sessions and salons. These events nurtured a vibrant community of music enthusiasts, promoting cultural exchange and significantly enriching the local arts scene. My efforts have been instrumental in fostering an environment where music lovers can collaborate and thrive.</p>
+                <h4>Photo Gallery</h4>
+                <ul>
+                  <li class="image-container"><img src="images/piano3.PNG" alt="My photo in piano association activity."></li>
+                  <li class="image-container"><img src="images/piano4.JPG" alt="My photo in piano association activity."></li>
+                </ul>
+              </div>
+            </div>
+
         </div>
 
     </div>
