--- a/resume.html
+++ b/resume.html
@@ -138,6 +138,60 @@
               </div>
             </div>
 
+          <div class="timeline-item">
+              <div class="timeline-header-1">
+              <h2>Skills</h2>
+            </div>
+          </div>
+
+          <div class="timeline-item">
+            <div class="timeline-header-2">
+                <h2>Programming Languages</h2>
+            </div>
+            <div class="skill-icon">
+              <img src="images/coding.png" class="jimy" alt="Piano Association of SJTU's icon">
+            </div>
+            <div class="timeline-content-1">
+                <p><strong>Advanced:</strong> Python, SQL, HTML, CSS, JavaScript, C++</p>
+                <p><strong>Familiar:</strong> C, SPSS, R</p>
+            </div>
+        </div>
+        
+        <div class="timeline-item">
+            <div class="timeline-header-3">
+                <h3>Machine Learning</h3>
+            </div>
+            <div class="skill-icon">
+              <img src="images/ml.png" class="jimy" alt="Piano Association of SJTU's icon">
+            </div>
+            <div class="timeline-content-2">
+                <p> Numpy, Scikit-Learn, Pandas, SciPy, spaCy, TensorFlow, PyTorch, Hadoop</p>
+            </div>
+        </div>
+        
+        <div class="timeline-item">
+            <div class="timeline-header-2">
+                <h2>Models</h2>
+            </div>
+            <div class="skill-icon">
+              <img src="images/models.png" class="jimy" alt="Piano Association of SJTU's icon">
+            </div>
+            <div class="timeline-content-1">
+                <p>SVM, Linear/Logistic Regression, Naïve Bayes, K-means, Hierarchical Clustering, PCA, XGBoost, LightGBM</p>            </div>
+        </div>
+
+        <div class="timeline-item">
+          <div class="timeline-header-3">
+              <h2>Tools</h2>
+          </div>
+          <div class="skill-icon">
+            <img src="images/tools.png" class="jimy" alt="Piano Association of SJTU's icon">
+          </div>
+          <div class="timeline-content-2">
+              <p>Advanced- Github, Tableau, Matplot, Flask, Altair, Panel, Seaborn, Django, Excel</p>
+          </div>
+      </div>
+
         </div>
 
     </div>
