--- a/resume.html
+++ b/resume.html
@@ -92,9 +92,12 @@
               </div>
 
             <div class="timeline-item">
-                <div class="timeline-header-1">
+              <div class="timeline-header-1">
                 <h2>Experience</h2>
               </div>
+              <!-- <div class="timeline-img">
+                
+              </div> -->
             </div>
 
             <div class="timeline-item">
