--- a/resume.html
+++ b/resume.html
@@ -95,6 +95,12 @@
               <div class="timeline-header-1">
                 <h2>Experience</h2>
               </div>
+              <div class="video-icon" onclick="playVideo()">
+                <video width="100" height="100" muted loop>
+                    <source src="images/yyx_me.MP4" type="video/mp4">
+                    Your browser does not support the video tag.
+                </video>
+            </div>
             </div>
 
             <div class="timeline-item">
