--- a/resume.html
+++ b/resume.html
@@ -97,7 +97,7 @@
               </div>
               <div class="video-icon" onclick="playVideo()">
                 <video width="100" height="100" muted loop>
-                    <source src="images/yyx_me.MP4" type="video/mp4">
+                    <source src="images/yyx_me.mp4" type="video/mp4">
                     Your browser does not support the video tag.
                 </video>
             </div>
