--- a/resume.html
+++ b/resume.html
@@ -15,7 +15,7 @@
 <body class="resume_body">
     <header>
         <a href = "#main-content" class="skip">Skip to Main Content</a>
-        <nav>
+        <nav id="navbar">
             <ul>
                 <li><a href="index.html">ABOUT ME</a></li>
                 <li class="active"><a href = "resume.html">RESUME</a></li>
@@ -203,6 +203,7 @@
         </div>
 
     </div>
+    <a href="#navbar"><button class="top">Jump to Top</button></a>
     </main>
 
     <footer>
