--- a/resume.html
+++ b/resume.html
@@ -96,7 +96,7 @@
                 <h2>Experience</h2>
               </div>
               <div class="video-icon" onclick="playVideo()">
-                <video width="100" height="100" muted loop>
+                <video width="100" height="100" muted>
                     <source src="images/yyx_me.mp4" type="video/mp4">
                     Your browser does not support the video tag.
                 </video>
