--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <main id="main-content-index">
     
     <div class="profile-section">
-      <img src="images/fangqing.JPG" class="profile-image" alt="My photo">
+      <img src="images/fangqing.jpg" class="profile-image" alt="My photo">
       <h1>Fangqing Lin</h1>
       <hr class="divider">
       <p class="subtitle">Engineering Student</p>
