add preload photo function

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <script>
         window.onload = function() {
         var img = new Image();
-        img.src = "images/fangqing.jpg";
+        img.src = "images/fangqinglin.jpg";
     };
     </script>
 </head>
@@ -34,7 +34,7 @@
     <main id="main-content-index">
     
     <div class="profile-section">
-      <img src="images/fangqing.jpg" class="profile-image" alt="My photo">
+      <img src="images/fangqinglin.jpg" class="profile-image" alt="My photo">
       <h1>Fangqing Lin</h1>
       <hr class="divider">
       <p class="subtitle">Engineering Student</p>
