add preload photo function

--- a/index.html
+++ b/index.html
@@ -10,12 +10,12 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Sedan:ital@0;1&display=swap" rel="stylesheet">
     <title>Fangqing's Website</title>
-    <script>
+    <!-- <script>
         window.onload = function() {
         var img = new Image();
         img.src = "images/fangqinglin.jpg";
     };
-    </script>
+    </script> -->
 </head>
 <body class="index_body">
     <header>
