add preload photo function

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
         <div class="profile-button">
             <h2>Here's who I am & what I do</h2>
             <a href="resume.html" class="button button-blue">Resume</a>
-            <a a href="projects.html" button class="button button-light">Projects</a>
+            <a href="projects.html" class="button button-light">Projects</a>
         </div> 
         
 
